# VidaiMock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  mock-server.toml
.github/workflows/: release.yml
config/providers/: anthropic.yaml  azure.yaml  bedrock.yaml  bedrock_converse.yaml  blackbox-demo.yaml  cohere.yaml  embeddings.yaml  error_simulator.yaml  gemini.yaml  gemini_count_tokens.yaml  gemini_embed.yaml  groq.yaml  mistral.yaml  openai.yaml  openai_compatible.yaml  openai_images.yaml  openai_moderations.yaml  openai_responses.yaml  openai_tools_mock.yaml  openrouter.yaml  vertex.yaml
examples/: README.md
examples/providers/: 01_echo.yaml  05_tools.yaml  07_streaming.yaml  10_rag.yaml
examples/templates/: 01_simple_echo.json.j2  02_logic_control.json.j2  03_reflection.json.j2  04_random_data_loop.json.j2  05_tool_calling.json.j2  06_rate_limit_error.json.j2  07_openai_stream_chunk.json.j2  08_anthropic_message.json.j2  09_gemini_candidates.json.j2  10_rag_citations.json.j2  11_security_fuzz.json.j2  16_data.csv.j2  (+7 more)
scripts/: debug_binary.py  verify_cli.sh  verify_metrics.sh  verify_non_json.sh
src/: aws_event_stream.rs  config.rs  handlers.rs  main.rs  provider.rs  replacer.rs  server.rs  tenancy.rs
tests/: automated_verification.py  benchmark.js  chaos_verification.py  dynamic-test.toml  dynamic_variables_verification.py  header_overrides_verification.py  security_verification.py  test_anthropic_latency.py  test_bedrock_stream.py  test_openai_tools.py  verify_distribution.py  verify_vidaimock.py
(+43 files in other folders)
