[package]
name = "vidaimock"
version = "0.2.6"
edition = "2021"

[dependencies]
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
mimalloc = "0.1.48"
num_cpus = "1.17.0"
rand = "0.9.2"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.10.4"
serde_json = "1.0.145"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
tera = "1.19"
serde_yaml = "0.9"
glob = "0.3"
walkdir = "2"
once_cell = "1.19"
rust-embed = "8.5"
crc32fast = "1.5.0"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
proptest = "1.6.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
